--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Portfolio • Antoine Bastos">
     <meta property="og:description" content="Portfolio de Antoine Bastos">
-    <meta property="og:image" content="https://antoinebastos.works/card1.png">
-    <meta property="og:url" content="https://antoinebastos.works">
+    <meta property="og:image" content="https://cydaw6.github.io/antoinebastos.fr/card1.png">
+    <meta property="og:url" content="https://antoinebastos.fr">
     <meta property="og:site_name" content="antoinebastos.fr">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <!-- <meta name="twitter:creator" content="> -->
-    <meta name="twitter:url" content="https://antoinebastos.works">
+    <meta name="twitter:url" content="https://antoinebastos.fr">
     <meta name="twitter:title" content="Portfolio • Antoine Bastos">
     <meta name="twitter:description"content="Développeur">
-    <meta name="twitter:image" content="https://antoinebastos.works/card1.png">
+    <meta name="twitter:image" content="https://cydaw6.github.io/antoinebastos.fr/card1.png">
 
     <title>Portfolio - Antoine Bastos</title>
     
@@ -50,8 +50,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js" integrity="sha512-wM+t5MzLiNHl2fwT5rWSXr2JMeymTtixiw2lWyVk1JK/jDM4RBSFoH4J8LjucwlDdY6Mu84Kj0gPXp7rLGaDyA==" crossorigin="anonymous"></script>
     
-    <script src="assets/library/js/p5.dom.js"></script>
-    <script src="/assets/libraries/js/anime.min.js"></script>
+    <script src="https://cydaw6.github.io/antoinebastos.fr/assets/library/js/p5.dom.js"></script>
+    <script src="https://cydaw6.github.io/antoinebastos.fr/assets/libraries/js/anime.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" type="text/css" href="style/menu.css">
@@ -61,7 +61,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
-    <script src="assets/scripts/js/reqdport.js"></script>
+    <script src="https://cydaw6.github.io/antoinebastos.fr/assets/scripts/js/reqdport.js"></script>
   </head>
   
 <body class="" oncontextmenu="return false;">
